Sun May 26, 2002 - xdebug 0.8.0 - Yoda

+ Implemented much better parameter tracing for user defined
  functions. (Derick)
= Renamed xdebug_get_function_trace() to xdebug_dump_function_trace().
  (Derick)
= Implemented new xdebug_get_function_trace() to return the function trace in
  an array. (Derick)
+ Added a parameter to xdebug_start_trace(). When this parameter is used,
  xdebug will dump a function trace to the filename which this parameter
  speficies. (Derick)
- Fix a problem with nested member functions. (Derick)
= Make configure scripts work with PHP 4.2.x. (Derick)
+ Implemented handling single-dimensional constant arrays passed to a
  function. (Derick)
= Fix function traces in windows. (Derick)
+ Implemented function traces, which you can start and stop with
  xdebug_start_trace() and xdebug_stop_trace(). You can view the trace by using
  the return array from xdebu_get_function_trace(). (Derick)
= Fixed segfaults with xdebug_call_*(). (Derick)

Wed May 08, 2002 - xdebug 0.7.0 - Freedom

+ Implemented handling of static method calls (foo::bar). (Derick)
+ Added correct handling of include(_once)/require(_once) and eval().
  (Derick)
+ Added ini setting to change the default setting for enabling showing
  enhanced error messages. (Defaults to "On"). (Derick)
+ Added the functions xdebug_enable() and xdebug_disable() to change the
  showing of stack traces from within your code. (Derick)
= Fixed the extension to show all errors. (Derick)
+ Implemented xdebug_memory_usage() which returns the memory in use by PHPs
  engine. (Derick)


Legenda:
+ New additions
- Removed functions
= Bug fixes