@@ -16,8 +16,9 @@ Sun May 26, 2002 - xdebug 0.8.0 - Yoda
 = Fix function traces in windows. (Derick)
 + Implemented function traces, which you can start and stop with
   xdebug_start_trace() and xdebug_stop_trace(). You can view the trace by using
-  the return array from xdebu_get_function_trace(). (Derick)
+  the return array from xdebug_get_function_trace(). (Derick)
 = Fixed segfaults with xdebug_call_*(). (Derick)
+
 
 Wed May 08, 2002 - xdebug 0.7.0 - Freedom
 
